--- a/app/speech_recognition_app/pubspec.yaml
+++ b/app/speech_recognition_app/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  path_provider: ^2.1.5
+  flutter_sound: ^9.30.0
+  permission_handler: ^12.0.1
+  http: ^1.6.0
+  fluttertoast: ^9.0.0
 
 dev_dependencies:
   flutter_test:
