--- a/api/.env
+++ b/api/.env
@@ -1,4 +1,5 @@
-MONGO_URI=localhost
 MONGO_DB=speaker_db
 MONGO_USER=admin
 MONGO_PASSWORD=admin123
+MONGO_URI=mongodb://admin:admin123@mongo:27017/?authSource=admin
+
